[tool.poetry]
name = "jetblack-fixparser"
version = "2.2.0"
description = "A parser for FIX messages"
authors = ["Rob Blackbourn <rob.blackbourn@googlemail.com>"]
license = "Apache-2.0"
packages = [
    { include = "jetblack_fixparser" }
]
repository = "https://github.com/rob-blackbourn/jetblack-fixparser"
readme = "README.md"
documentation = "https://rob-blackbourn.github.io/jetblack-fixparser"

[tool.poetry.dependencies]
python = "^3.8"
# wheel = "^0.34.2"
"ruamel.yaml" = "^0.17"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-runner = "^6.0"
pylint = "^2.17"
autopep8 = "^2.0"
mypy = "^1.1"
mkdocs = "^1.4"
mkdocs-material = "^9.1"
jetblack-markdown = "^0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
